--- a/css/smartphone.css
+++ b/css/smartphone.css
@@ -1,406 +1,1 @@
-@charset "UTF-8";
-/* アニメーションベンダープレフィックス込み指定 */
-/* アニメーションベンダープレフィックス込み指定 */
-/********************/
-/* PC
-----------------------------------*/
-#nav-toggle,
-#sp-nav,
-.sp_nav,
-#sp_btn {
-  display: none;
-}
-
-/* SP
-----------------------------------*/
-@media screen and (max-width: 1101px) {
-  body {
-    font-size: 1.4rem;
-  }
-  .fleft0,
-  .fleft1,
-  .fleft2,
-  .fright0,
-  .fright1,
-  .fright2 {
-    display: block;
-    float: none;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 15px;
-  }
-  /* navi */
-  #header_nav {
-    display: none;
-  }
-  #flash {
-    width: 100%;
-    height: auto;
-  }
-  /* footer */
-  /* contents */
-  .section-container,
-  .section-container03 {
-    max-width: initial;
-    width: 95%;
-    padding: 60px 0;
-  }
-  .section-container.type1,
-  .section-container03.type1 {
-    padding: 60px 0 0;
-  }
-  .section-container02 {
-    padding: 60px 0;
-    width: calc(100% - 20px);
-  }
-  .breadcrumb_box .breadcrumb {
-    width: 95%;
-  }
-  /* sp_nav */
-  /* nav-toggle */
-  #nav-toggle {
-    display: block;
-    position: fixed;
-    top: 15px;
-    right: 15px;
-    height: 60px;
-    cursor: pointer;
-    background: #63bbd3;
-    padding: 15px;
-    backdrop-filter: blur(6px);
-  }
-  #nav-toggle > div {
-    position: relative;
-    width: 35px;
-  }
-  #nav-toggle > div > p {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 25px;
-    font-size: 11px;
-    text-align: center;
-    color: #fff;
-    font-weight: 600;
-    text-transform: uppercase;
-    font-family: "Cabin", sans-serif;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-  }
-  #nav-toggle span {
-    width: 100%;
-    height: 1px;
-    left: 0;
-    display: block;
-    background: #fdf4d6;
-    position: absolute;
-    transition: transform 0.6s ease-in-out, top 0.5s ease;
-  }
-  #nav-toggle span:nth-child(1) {
-    top: 0;
-  }
-  #nav-toggle span:nth-child(2) {
-    top: 10px;
-  }
-  #nav-toggle span:nth-child(3) {
-    top: 20px;
-  }
-  #nav-toggle:hover span:nth-child(1) {
-    top: 0px;
-  }
-  #nav-toggle:hover span:nth-child(3) {
-    top: 20px;
-  }
-  .open #nav-toggle span:nth-child(1) {
-    top: 15px;
-    transform: rotate(45deg);
-  }
-  .open #nav-toggle span:nth-child(2) {
-    top: 15px;
-    width: 0;
-    left: 50%;
-  }
-  .open #nav-toggle span:nth-child(3) {
-    top: 15px;
-    transform: rotate(-45deg);
-  }
-  .sp-nav-list {
-    position: relative;
-    z-index: 20;
-    width: 100%;
-    max-width: 400px;
-    margin-inline: auto;
-  }
-  .sp-nav-list li.footer-only {
-    display: none;
-  }
-  #nav-toggle {
-    z-index: 1000;
-  }
-  #container {
-    z-index: 900;
-  }
-  #sp-nav {
-    background: #f4f6f5;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 900;
-    display: block;
-    visibility: hidden;
-    width: 100%;
-    height: 100vh;
-    opacity: 0;
-    transition: opacity 0.4s ease, visibility 0.4s ease;
-  }
-  #sp-nav .inner {
-    position: relative;
-    z-index: 990;
-    padding: 45px 20px 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: auto;
-    height: 95vh;
-  }
-  #sp-nav .inner .sp-logo {
-    display: block;
-    position: relative;
-    max-width: 180px;
-    margin: 0 auto 20px;
-    transform: translateX(-2%);
-    text-align: center;
-    background: transparent;
-  }
-  /* open */
-  /* section-container */
-}
-@media screen and (max-width: 1101px) and (max-width: 639px) {
-  #sp-nav .inner {
-    width: 95%;
-    padding-top: 30px;
-    padding-bottom: 80px;
-    margin-inline: auto;
-  }
-}
-@media screen and (max-width: 1101px) {
-  #sp-nav a {
-    display: block;
-    color: #2e2e2e;
-    text-decoration: none;
-    padding: 10px 0;
-    transition: color 0.4s ease;
-    font-weight: 600;
-    background: #fefefe;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-  }
-  #sp-nav a span {
-    display: block;
-    text-align: center;
-  }
-  #sp-nav a span.eng {
-    font-size: 1rem;
-    color: #63bbd3;
-  }
-  #sp-nav a span.ja {
-    font-size: 1.2rem;
-    color: #63bbd3;
-  }
-  #sp-nav a:hover {
-    color: #666;
-  }
-  #sp-nav .dropdown {
-    padding: 4px 4px 8px;
-  }
-  #sp-nav .dropdown .drop-title {
-    display: none;
-  }
-  #sp-nav .dropdown .dropdown-ul {
-    display: flex;
-    gap: 6px 4%;
-    flex-wrap: wrap;
-  }
-  #sp-nav .dropdown .dropdown-li {
-    border-bottom: 0;
-    width: 100%;
-  }
-  #sp-nav .dropdown .dropdown-li a {
-    display: block;
-    position: relative;
-    height: 100%;
-    padding: 8px;
-    background: rgba(255, 255, 255, 0.5);
-    border-bottom: 0;
-    border-radius: 0 0 8px 0;
-    color: #111;
-    font-size: 12px;
-    letter-spacing: 0;
-    line-height: 1.4;
-  }
-  #sp-nav .dropdown .dropdown-li span {
-    display: block;
-  }
-  #sp-nav .globalNav {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: spcae-between;
-    gap: 10px;
-  }
-  #sp-nav .globalNav > li {
-    opacity: 0;
-    transform: translateX(200px);
-    transition: transform 0.3s ease, opacity 0.2s ease;
-    width: 100%;
-  }
-  #sp-nav .globalNav > li .icon {
-    width: 30px;
-  }
-  #sp-nav .globalNav > li.drop-parent {
-    width: 100%;
-  }
-  #sp-nav .globalNav > li:nth-child(2) {
-    transition-delay: 0.1s;
-  }
-  #sp-nav .globalNav > li:nth-child(3) {
-    transition-delay: 0.2s;
-  }
-  #sp-nav .globalNav > li:nth-child(4) {
-    transition-delay: 0.3s;
-  }
-  #sp-nav .globalNav > li:nth-child(5) {
-    transition-delay: 0.4s;
-  }
-  #sp-nav .globalNav > li:nth-child(6) {
-    transition-delay: 0.5s;
-  }
-  #sp-nav .globalNav > li:nth-child(7) {
-    transition-delay: 0.6s;
-  }
-  .open {
-    overflow: hidden;
-  }
-  .open #sp-nav {
-    visibility: visible;
-    opacity: 1;
-  }
-  .open #sp-nav li {
-    opacity: 1;
-    transform: translateX(0);
-    transition: transform 1s ease, opacity 0.9s ease;
-  }
-  .rsection-container,
-  .lsection-container {
-    float: none;
-    width: 100%;
-  }
-  .lsection-container,
-  .rsection-container {
-    float: none;
-    width: 100%;
-  }
-}
-@media screen and (max-width: 639px) {
-  body {
-    font-size: 1.1rem;
-  }
-  #l-header .inner #logo {
-    width: 80px;
-  }
-  #nav-toggle {
-    top: 10px;
-    right: 10px;
-  }
-  .tbl_scroll {
-    padding-bottom: 10px;
-    overflow: auto;
-    white-space: nowrap;
-  }
-  .tbl_scroll::-webkit-scrollbar {
-    height: 5px;
-  }
-  .tbl_scroll::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  .tbl_scroll::-webkit-scrollbar-thumb {
-    background: #bcbcbc;
-  }
-  .tbl_scroll::-webkit-scrollbar-piece {
-    background: #eee;
-  }
-  .tbl_scroll::-webkit-scrollbar-piece:start {
-    background: #eee;
-  }
-  .spbr {
-    display: block;
-  }
-  .pcbr {
-    display: none;
-  }
-  /* footer */
-  #l-footer {
-    text-align: center;
-  }
-  #l-footer .inner .copyright {
-    text-align: center;
-    font-size: 0.8rem;
-    font-weight: normal;
-  }
-  .lsection-container {
-    margin-bottom: 20px;
-  }
-  /* form */
-  .form {
-    width: 100%;
-  }
-  .form dl {
-    margin: 10px 0;
-  }
-  .form dl dt {
-    float: none;
-    width: 100%;
-    padding-top: 15px;
-  }
-  .form dl dd {
-    width: 100%;
-    padding-left: 0;
-    padding-bottom: 15px;
-    padding-top: 10px;
-    line-height: 20px;
-  }
-  .form dl dd:last-child {
-    border-bottom: 0px;
-    margin-bottom: 0px;
-  }
-  .form .textarea,
-  .form textarea {
-    width: 100%;
-  }
-  .form .textarea.textarea03 {
-    width: 40%;
-  }
-  .form .textarea02 {
-    width: 43.5%;
-  }
-  .form button {
-    width: 95%;
-  }
-  #wrapper {
-    overflow-y: hidden;
-  }
-}
-@media screen and (max-width: 480px) {
-  html {
-    font-size: 3.125vw;
-  }
-}
-
-/*# sourceMappingURL=smartphone.css.map */
+#nav-toggle,#sp-nav,.sp_nav,#sp_btn{display:none}@media screen and (max-width: 1101px){body{font-size:1.4rem}.fleft0,.fleft1,.fleft2,.fright0,.fright1,.fright2{display:block;float:none;margin-left:auto;margin-right:auto;margin-bottom:15px}#header_nav{display:none}#flash{width:100%;height:auto}.section-container,.section-container03{max-width:initial;width:95%;padding:60px 0}.section-container.type1,.section-container03.type1{padding:60px 0 0}.section-container02{padding:60px 0;width:calc(100% - 20px)}.breadcrumb_box .breadcrumb{width:95%}#nav-toggle{display:block;position:fixed;top:15px;right:15px;height:60px;cursor:pointer;background:#63bbd3;padding:15px;-webkit-backdrop-filter:blur(6px);backdrop-filter:blur(6px)}#nav-toggle>div{position:relative;width:35px}#nav-toggle>div>p{position:absolute;left:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%);top:25px;font-size:11px;text-align:center;color:#fff;font-weight:600;text-transform:uppercase;font-family:"Cabin",sans-serif;font-weight:600;text-transform:uppercase;letter-spacing:.05em}#nav-toggle span{width:100%;height:1px;left:0;display:block;background:#fdf4d6;position:absolute;-webkit-transition:top .5s ease,-webkit-transform .6s ease-in-out;transition:top .5s ease,-webkit-transform .6s ease-in-out;transition:transform .6s ease-in-out,top .5s ease;transition:transform .6s ease-in-out,top .5s ease,-webkit-transform .6s ease-in-out}#nav-toggle span:nth-child(1){top:0}#nav-toggle span:nth-child(2){top:10px}#nav-toggle span:nth-child(3){top:20px}#nav-toggle:hover span:nth-child(1){top:0px}#nav-toggle:hover span:nth-child(3){top:20px}.open #nav-toggle span:nth-child(1){top:15px;-webkit-transform:rotate(45deg);transform:rotate(45deg)}.open #nav-toggle span:nth-child(2){top:15px;width:0;left:50%}.open #nav-toggle span:nth-child(3){top:15px;-webkit-transform:rotate(-45deg);transform:rotate(-45deg)}.sp-nav-list{position:relative;z-index:20;width:100%;max-width:400px;margin-inline:auto}.sp-nav-list li.footer-only{display:none}#nav-toggle{z-index:1000}#container{z-index:900}#sp-nav{background:#f4f6f5;position:fixed;top:0;left:0;right:0;bottom:0;z-index:900;display:block;visibility:hidden;width:100%;height:100vh;opacity:0;-webkit-transition:opacity .4s ease,visibility .4s ease;transition:opacity .4s ease,visibility .4s ease}#sp-nav .inner{position:relative;z-index:990;padding:45px 20px 20px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;overflow:auto;height:95vh}#sp-nav .inner .sp-logo{display:block;position:relative;max-width:180px;margin:0 auto 20px;-webkit-transform:translateX(-2%);transform:translateX(-2%);text-align:center;background:rgba(0,0,0,0)}}@media screen and (max-width: 1101px)and (max-width: 639px){#sp-nav .inner{width:95%;padding-top:30px;padding-bottom:80px;margin-inline:auto}}@media screen and (max-width: 1101px){#sp-nav a{display:block;color:#2e2e2e;text-decoration:none;padding:10px 0;-webkit-transition:color .4s ease;transition:color .4s ease;font-weight:600;background:#fefefe;border-radius:20px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;gap:5px}#sp-nav a span{display:block;text-align:center}#sp-nav a span.eng{font-size:1rem;color:#63bbd3}#sp-nav a span.ja{font-size:1.2rem;color:#63bbd3}#sp-nav a:hover{color:#666}#sp-nav .dropdown{padding:4px 4px 8px}#sp-nav .dropdown .drop-title{display:none}#sp-nav .dropdown .dropdown-ul{display:-webkit-box;display:-ms-flexbox;display:flex;gap:6px 4%;-ms-flex-wrap:wrap;flex-wrap:wrap}#sp-nav .dropdown .dropdown-li{border-bottom:0;width:100%}#sp-nav .dropdown .dropdown-li a{display:block;position:relative;height:100%;padding:8px;background:rgba(255,255,255,.5);border-bottom:0;border-radius:0 0 8px 0;color:#111;font-size:12px;letter-spacing:0;line-height:1.4}#sp-nav .dropdown .dropdown-li span{display:block}#sp-nav .globalNav{list-style:none;display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:spcae-between;-ms-flex-pack:spcae-between;justify-content:spcae-between;gap:10px}#sp-nav .globalNav>li{opacity:0;-webkit-transform:translateX(200px);transform:translateX(200px);-webkit-transition:opacity .2s ease,-webkit-transform .3s ease;transition:opacity .2s ease,-webkit-transform .3s ease;transition:transform .3s ease,opacity .2s ease;transition:transform .3s ease,opacity .2s ease,-webkit-transform .3s ease;width:100%}#sp-nav .globalNav>li .icon{width:30px}#sp-nav .globalNav>li.drop-parent{width:100%}#sp-nav .globalNav>li:nth-child(2){-webkit-transition-delay:.1s;transition-delay:.1s}#sp-nav .globalNav>li:nth-child(3){-webkit-transition-delay:.2s;transition-delay:.2s}#sp-nav .globalNav>li:nth-child(4){-webkit-transition-delay:.3s;transition-delay:.3s}#sp-nav .globalNav>li:nth-child(5){-webkit-transition-delay:.4s;transition-delay:.4s}#sp-nav .globalNav>li:nth-child(6){-webkit-transition-delay:.5s;transition-delay:.5s}#sp-nav .globalNav>li:nth-child(7){-webkit-transition-delay:.6s;transition-delay:.6s}.open{overflow:hidden}.open #sp-nav{visibility:visible;opacity:1}.open #sp-nav li{opacity:1;-webkit-transform:translateX(0);transform:translateX(0);-webkit-transition:opacity .9s ease,-webkit-transform 1s ease;transition:opacity .9s ease,-webkit-transform 1s ease;transition:transform 1s ease,opacity .9s ease;transition:transform 1s ease,opacity .9s ease,-webkit-transform 1s ease}.rsection-container,.lsection-container{float:none;width:100%}.lsection-container,.rsection-container{float:none;width:100%}}@media screen and (max-width: 639px){body{font-size:1.1rem}#l-header .inner #logo{width:80px}#nav-toggle{top:10px;right:10px}.tbl_scroll{padding-bottom:10px;overflow:auto;white-space:nowrap}.tbl_scroll::-webkit-scrollbar{height:5px}.tbl_scroll::-webkit-scrollbar-track{background:#f1f1f1}.tbl_scroll::-webkit-scrollbar-thumb{background:#bcbcbc}.tbl_scroll::-webkit-scrollbar-piece{background:#eee}.tbl_scroll::-webkit-scrollbar-piece:start{background:#eee}.spbr{display:block}.pcbr{display:none}#l-footer{text-align:center}#l-footer .inner .copyright{text-align:center;font-size:.8rem;font-weight:normal}.lsection-container{margin-bottom:20px}.form{width:100%}.form dl{margin:10px 0}.form dl dt{float:none;width:100%;padding-top:15px}.form dl dd{width:100%;padding-left:0;padding-bottom:15px;padding-top:10px;line-height:20px}.form dl dd:last-child{border-bottom:0px;margin-bottom:0px}.form .textarea,.form textarea{width:100%}.form .textarea.textarea03{width:40%}.form .textarea02{width:43.5%}.form button{width:95%}#wrapper{overflow-y:hidden}}@media screen and (max-width: 480px){html{font-size:3.125vw}}/*# sourceMappingURL=smartphone.css.map */
