--- a/scss/basis.scss
+++ b/scss/basis.scss
@@ -5431,3 +5431,89 @@ h4 {
   text-align: center;
   margin: 20px auto;
 }
+
+
+.slide_list {
+  position: relative;
+
+  li {
+    margin-left: 10px;
+
+    img {
+      width: auto;
+      height: 240px;
+      border-radius: 5px;
+      overflow: hidden;
+    }
+
+    a {
+      transition: all 0.6s ease;
+
+      &:hover {
+        opacity: 0.6;
+      }
+    }
+  }
+
+  @include for-size(tablet) {
+    li {
+      margin-left: 5px;
+
+      img {
+        height: 180px;
+      }
+    }
+  }
+
+  @include for-size(phone-only) {
+    li {
+      img {
+        height: 100px;
+      }
+    }
+  }
+}
+
+.slide_list2 {
+  position: relative;
+  margin-top: 10px;
+
+  li {
+    margin-left: 10px;
+
+    img {
+      width: auto;
+      height: 240px;
+      border-radius: 5px;
+      overflow: hidden;
+    }
+
+    a {
+      transition: all 0.6s ease;
+
+      &:hover {
+        opacity: 0.6;
+      }
+    }
+  }
+
+  @include for-size(tablet) {
+    margin-top: 5px;
+
+    li {
+      margin-left: 5px;
+
+      img {
+        height: 180px;
+      }
+    }
+  }
+
+  @include for-size(phone-only) {
+    li {
+      img {
+        height: 100px;
+      }
+    }
+  }
+}
