--- a/scss/basis.scss
+++ b/scss/basis.scss
@@ -1752,11 +1752,11 @@ h4 {
   position: relative;
   z-index: 3;
   max-width: 90%;
-  margin-right: auto;
-  margin-left: auto;
+  margin-inline: auto;
 
   &.type1 {
     border: 3px solid $base_color;
+    border-radius: 15px;
   }
 
   &.shadow {
@@ -2494,18 +2494,21 @@ h4 {
   font-size: 1.7rem;
   position: relative;
   padding: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   font-weight: 600;
   color: #fff;
   padding-left: 50px;
   border-radius: 10px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-inline: auto;
 
   &.middle {
     max-width: 70%;
     padding: 5px 20px;
     padding-left: 50px;
+  }
+
+  &.mt0 {
+    margin-top: 0;
   }
 
   &:before {
@@ -2727,43 +2730,112 @@ h4 {
 }
 
 .button01 {
-  a {
+	a {
+		width: 260px;
+		margin: 40px auto 20px;
+		color: #fff;
+		display: block;
+		padding: 20px 30px;
+		border: 1px solid $base_color;
     background: $base_color;
-    text-align: center;
-    width: 300px;
-    margin: 15px auto;
-    color: #fff;
-    display: block;
-    padding: 8px 5px;
-    font-weight: 600;
-    border-radius: 35px;
-    max-width: 90%;
+		border-radius: 35px;
+		font-weight: bold;
+		position: relative;
+		font-size: 1.5rem;
 
-    &:hover {
-      background: $base_color;
-      color: #fefefe;
-    }
-  }
+		&::after {
+			// content: "●";
+      @include awesome(\f192);
+			position: absolute;
+			right: 30px;
+			top: 50%;
+			transform: translateY(-50%);
+			font-size: 1rem;
+			transition: all 0.5s ease;
+			color: #fff;
+		}
 
-  &.mail {
-    flex-basis: 100%;
+		&:hover {
+			background: #fff;
+			color: $base_color;
 
-    a {
-      background: $base_color;
-      margin: 15px auto 25px;
+			&::after {
+				right: 20px;
+				color: $base_color;
+			}
+		}
+	}
 
-      &:before {
-        @include awesome($mail);
-        margin-right: 5px;
-      }
-    }
-  }
+	&.type1 {
+		background: $sub_color;
+		border: 2px solid $sub_color;
 
-  @include for-size(phone-only) {
-    a {
-      width: 95%;
-    }
-  }
+		&:hover {
+			background: #fff;
+			color: $sub_color;
+		}
+	}
+
+	&.type2 {
+		a {
+			color: $txt;
+			border: none;
+			background: #fff;
+
+			&:hover {
+				opacity: 0.6;
+			}
+		}
+	}
+
+	&.mail {
+		flex-basis: 100%;
+
+		a {
+			background: $sub_color;
+			margin: 15px auto 25px;
+
+			&:before {
+				@include awesome($mail);
+				margin-right: 5px;
+			}
+		}
+	}
+
+	&.left {
+		a {
+			margin-left: 0;
+		}
+	}
+
+	&.white {
+		a {
+			background: #fff;
+			border: 1px solid #fff;
+
+			&:hover {
+				color: $txt;
+				&::after {
+					color: $base_color;
+				}
+			}
+		}
+	}
+
+	@include for-size(phone-only) {
+		a {
+			width: 95%;
+			font-size: 1rem;
+			padding: 15px 30px;
+      margin: unset;
+		}
+
+		&.left {
+			a {
+				margin-left: auto;
+			}
+		}
+	}
 }
 
 .button02 {
@@ -3473,7 +3545,7 @@ h4 {
 
     &:not(:last-of-type) {
       margin-bottom: 5px;
-      border-bottom: 1px dashed $txt;
+      border-bottom: 1px solid #ccc;
     }
 
     &:before {
@@ -3755,7 +3827,7 @@ h4 {
 
     &.telbnr-mail {
       a {
-        font-size: 2rem;
+        font-size: 2.2rem;
         padding-top: 5px;
 
         &:before {
@@ -3763,7 +3835,7 @@ h4 {
         }
 
         @include for-size(phone-only) {
-          font-size: 1.4rem;
+          font-size: 1.9rem;
           padding: 0;
         }
       }
@@ -3947,7 +4019,6 @@ h4 {
   border-bottom: 2px dotted $base_color;
   color: $txt;
   font-weight: 600;
-  margin-bottom: 20px;
   font-size: 1.8rem;
 
   &:after {
@@ -4167,6 +4238,12 @@ h4 {
       background: #fefefe;
       padding: 15px;
     }
+  }
+
+  &.type_width_s {
+    max-width: 800px;
+    width: 100%;
+    margin-inline: auto;
   }
 
   &.ai-center {
@@ -4737,6 +4814,19 @@ h4 {
     align-items: flex-start;
   }
 
+  &.jc-center {
+    justify-content: center;
+  }
+
+  &.w800 {
+    max-width: 800px;
+    width: 100%;
+    margin-inline: auto;
+    @include for-size(tablet) {
+      max-width: 400px;
+    }
+  }
+
   .child {
     width: 48%;
   }
@@ -4963,6 +5053,25 @@ h4 {
   @include for-size(tablet) {
     padding-left: 10px;
     padding-right: 10px;
+  }
+}
+.js-marker {
+  line-height: 2;
+
+  span {
+    padding: 3px;
+    background-image: linear-gradient(90deg, lighten($sub_color, 3%), lighten($sub_color, 3%));
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    background-size: 0 35%;
+    transition: all 3s ease-in-out;
+    @include txt-shadow(#fff);
+  }
+
+  &.on {
+    span {
+      background-size: 100% 35%;
+    }
   }
 }
 
