--- a/scss/basis.scss
+++ b/scss/basis.scss
@@ -2361,30 +2361,41 @@ h4 {
 
 .mtitle_icon {
   position: relative;
-  text-align: center;
-  margin-bottom: 40px;
-  margin-top: -45px;
+  padding: 8px 0 8px 57px;
+  color: $brown;
+  margin-bottom: 10px;
 
-  .icon {
-    width: 50px;
-    margin: 0 auto;
+  small {
+    font-size: 90%;
   }
 
-  .ja {
-    font-size: 2.5rem;
-  }
-
-  i {
-    display: block;
+  &:before {
+    position: absolute;
+    top: 50%;
+    left: 8px;
+    transform: translateY(-50%);
+    font-size: 2.4rem;
     color: $base_color;
-    font-size: 3rem;
+    @include awesome("\f121"); // fa-code
+  }
+
+  &.type1:before {
+    @include awesome("\f53f"); // fa-palette
+  }
+
+  &.type2:before {
+    @include awesome("\f075", 400); // fa-comment
+    font-family: "Font Awesome 5 Regular";
   }
 
   @include for-size(phone-only) {
-    margin-bottom: 20px;
+    font-size: 1.6rem;
+    padding: 5px 0 5px 45px;
+    margin-bottom: 5px;
 
-    .ja {
+    &:before {
       font-size: 1.6rem;
+      left: 5px;
     }
   }
 }
@@ -3356,7 +3367,19 @@ h4 {
     &:last-child {
       padding-bottom: 0;
       margin-bottom: 0;
-      border-bottom: none;
+      // border-bottom: none;
+    }
+  }
+
+  &.type1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px 4%;
+    
+    @include for-size(phone-only) {
+      grid-template-columns: repeat(1, 1fr);
+        width: 98%;
+        font-size: 1.3rem;
     }
   }
 
@@ -3440,7 +3463,7 @@ h4 {
         @include awesome(\f35d);
         margin-left: 4px;
         font-size: 0.8em;
-        color: $brown;
+        color: $base_color;
       }
     }
   }
@@ -4773,7 +4796,7 @@ h4 {
   }
 
   @include for-size(phone-only) {
-    padding: 3em;
+    padding: 2em;
   }
 }
 
@@ -4824,7 +4847,7 @@ h4 {
   height: 1px;
   border-top: 1px solid rgba($sub_color, 0.2);
   margin: 5em auto;
-  width: 20%;
+  width: 60%;
   display: block;
 
   @include for-size(phone-only) {
